Prevent refresh when user swipes down on mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 body {
     transition: background-color 100ms linear;
+    overscroll-behavior-y: contain;
 }
 
 ::ng-deep .ant-upload {
